# toxicwebui

./: .coveragerc  .gitignore  .gitmodules  MANIFEST.in  README.rst  custom-commands.el  pyproject.toml  requirements.txt  toxicbuild.yml
docs/source/: CHANGELOG.rst  conf.py  config.rst  index.rst  notifications_api.rst
scripts/: build_docs.sh  check_coverage.sh  env.sh  release.sh  run_jasmine_tests.sh  run_linter.sh  run_selenium_tests.sh  upload_docs.sh
testdata/: toxicmaster.conf  toxicnotifications.conf  toxicwebui.conf
tests/: __init__.py
tests/behave/: __init__.py  environment.py
tests/behave/steps/: authentication_steps.py  base_steps.py  build_steps.py  buildset_steps.py  notifications_steps.py  register_steps.py  repo_steps.py  slave_steps.py  waterfall_steps.py
tests/functional/: __init__.py  test_rest_api.py
tests/js-unit/: SpecRunner.html  jasmine.yml  src
tests/js-unit/spec/: test_base.spec.js  test_login.spec.js  test_pages.spec.js  test_repository.spec.js  test_wsock.spec.js
tests/unit/: test_connector.py  test_context_processors.py  test_utils.py  test_web.py
toxicwebui/: __init__.py  cmds.py  connectors.py  context_processors.py  utils.py  web.py
toxicwebui/static/toxicbuild/js/: main.js
toxicwebui/templates/: toxicui.conf.tmpl
