[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "toxicwebui"
dynamic = ["version"]
authors = [
  { name="me@myself.com" },
]
description = "toxicwebui: My super cool project"
readme = "README.md"

dependencies = [
    'tornado==6.3.2',
    'pyrocumulus==0.12.4',
    'toxiccore>=0.11.0',
    'toxiccommon>=0.10.0',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
include = ["toxicwebui"]

[tool.setuptools.dynamic]
version = {attr = "toxicwebui.__version__"}